# ChangeLog for app-misc/beagle
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/beagle/Attic/ChangeLog,v 1.88 2008/12/16 22:04:01 loki_val Exp $

*beagle-0.3.8-r2 (16 Dec 2008)

  16 Dec 2008; Peter Alfredsen <loki_val@gentoo.org>
  -files/beagle-0.3.8-fix_gmime-2.4.patch,
  -files/beagle-0.3.8-fix_gvfs.patch, metadata.xml, -beagle-0.3.6.ebuild,
  -beagle-0.3.8.ebuild, -beagle-0.3.8-r1.ebuild, +beagle-0.3.8-r2.ebuild:
  Bump, fix bug 246336, bug 248331, bug 248703 and bug 248957. Also trawled
  upstream SVN and fixed a number of hangs and crashes. Also add dotnet herd
  as herd.

  14 Dec 2008; Peter Alfredsen <loki_val@gentoo.org> beagle-0.3.6.ebuild,
  beagle-0.3.7-r1.ebuild, beagle-0.3.8.ebuild, beagle-0.3.8-r1.ebuild:
  Use virtual/monodoc to accomodate inclusion of monodoc in mono from
  >=mono-2.2_pre1

*beagle-0.3.8-r1 (22 Nov 2008)

  22 Nov 2008; Peter Alfredsen <loki_val@gentoo.org>
  +files/beagle-0.3.8-fix_gmime-2.4.patch,
  +files/beagle-0.3.8-fix_gvfs.patch, +beagle-0.3.8-r1.ebuild:
  Fix beagle for gmime-2.4, patch from frugalware and adjust deps for
  gtk-sharp-2.12*

  11 Oct 2008; Gilles Dartiguelongue <eva@gentoo.org> beagle-0.2.18.ebuild,
  beagle-0.2.18-r1.ebuild, beagle-0.3.6.ebuild, beagle-0.3.7-r1.ebuild,
  beagle-0.3.8.ebuild:
  Use gmime-2.2*, bug #239412.

*beagle-0.3.8 (06 Sep 2008)

  06 Sep 2008; Cédric Krier <cedk@gentoo.org> +beagle-0.3.8.ebuild:
  Version bump

  31 Jul 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add missing USE flag description for inotify to metadata.

  28 Jul 2008; Raúl Porcel <armin76@gentoo.org> beagle-0.3.7-r1.ebuild:
  x86 stable wrt #230185

  27 Jul 2008; Olivier Crête <tester@gentoo.org> beagle-0.3.7-r1.ebuild:
  Stable on amd64, bug #230185

  16 Jul 2008; nixnut <nixnut@gentoo.org> beagle-0.3.7-r1.ebuild:
  Stable on ppc wrt bug 230185

*beagle-0.2.18-r1 (29 Jun 2008)
