@@ -10,6 +10,6 @@ DIST beagle-0.3.8.tar.bz2 1871958 RMD160 8e968cc391763de1a781d242d642ab5e9ccb57e
 EBUILD beagle-0.2.18-r1.ebuild 3410 RMD160 9d98d80f340351bf4abdfcb23860078d1157bc0d SHA1 1996005fe2dddb4c64f29c4cbf833de343e1afc0 SHA256 87e9e8d7d6d5420d9952df96023fb4100566a042302a197c4b26828424218f51
 EBUILD beagle-0.2.18.ebuild 3361 RMD160 55f56988d063e94d0ba33da227665487c43669e3 SHA1 45610ed9a4df9bb3a8387fb0438f8451a8b76eae SHA256 4ee3a1d4c2e957770bff9e0b930216b0e78c09489bd7c8628f27bd0476f75b0c
 EBUILD beagle-0.3.7-r1.ebuild 5720 RMD160 ab2c6afcc6a6e94c62c781a4a3cf1b86b2bf602d SHA1 60b91d74158e0a29dc8be2ad034a6568c49c2001 SHA256 108795f7b5fc3f4121def4f58d36017dc5876fed24ac181b1c52bfab10a3c7dd
-EBUILD beagle-0.3.8-r2.ebuild 5678 RMD160 696497b44dd07d90b786d9a4dcb2b66b3937e3f8 SHA1 e58cb2eb2df203d41f7a201f08387a63e546fb28 SHA256 3bba01495551514d918088169f5aa1a1477f75a4994d9588e3e4e17a79a2b0bb
-MISC ChangeLog 15023 RMD160 da90db91187e815d0b56fed5821b497ad22afee8 SHA1 637616706682a764420bde458482c93b9790894c SHA256 d86ea8a7f6c22f83074737efc3489e1912f3ab5e95c7e8d648f488409e8bde72
+EBUILD beagle-0.3.8-r2.ebuild 5705 RMD160 01bbed7c81ec048f9f906efe09850c8b8ef5bbac SHA1 b9b0d0c43ac056757f28b8e0c6dd0ceaeb973065 SHA256 5426b28fc1d1be0ab2c2fe4926a65706866de7fc7725309c521ac0c65f7a7413
+MISC ChangeLog 15139 RMD160 833ecee9ca0918e3618e50ba9eefe4542a8d4007 SHA1 dac98ad2e3e58e9e0d0e4108c04255ba39dc0a2e SHA256 2931af1c82c7498d1054e5344ecd81e09bac7d7306531a30f2d060d99d8a6828
 MISC metadata.xml 2559 RMD160 397d34b699ab341c80b107e0b82a2e340f85f6b0 SHA1 6b01e5618ebc0dcba6ab779af12004603d36abfa SHA256 b506021a73fefa6189d84089ced5388711338945367f9d5236f8f93a115788ec
